public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/59/source/compile
source.c: In function ‘main’:
source.c:8:38: error: expected ‘;’ before ‘)’ token
  for (i = strlen(kata)-1; i >= 0, i--) {
                                      ^
